added main and thank you section

--- a/index.html
+++ b/index.html
@@ -15,6 +15,48 @@
   </style>
 </head>
 <body>
+  <main class="content-container">
+    <section class="main-section">
+      <div class="icon-container">
+        <img class="icon" src="./images/icon-star.svg" alt="">
+      </div>
+      <h1 class="content-title">How did we do?</h1>
+      <p class="content-para">Please let us know how we did with your support request. All feedback is appreciated 
+      to help us improve our offering!</p>
+      <form action="app.js">
+        <div class="checkbox-container">
+          <input class="checkbox" type="checkbox">
+          <label for="checkbox">1</label>
+        </div>
+        <div class="checkbox-container">
+          <input class="checkbox" type="checkbox">
+          <label for="checkbox">2</label>
+        </div>
+        <div class="checkbox-container">
+          <input class="checkbox" type="checkbox">
+          <label for="checkbox">3</label>
+        </div>
+        <div class="checkbox-container">
+          <input class="checkbox" type="checkbox">
+          <label for="checkbox">4</label>
+        </div>
+        <div class="checkbox-container">
+          <input class="checkbox" type="checkbox">
+          <label for="checkbox">5</label>
+        </div>
+        <input type="submit" value="Submit">
+      </form>
+    </section>
+    <section class="confirmation-container">
+      <div class="image-container">
+        <img class="img" src="./images/illustration-thank-you.svg" alt="">
+      </div>
+      <p class="selection-display"></p>
+      <h2 class="submission-title">Thank You!</h2>
+      <p class="submission-para"> We appreciate you taking the time to give a rating. If you ever need more support, 
+      don’t hesitate to get in touch!</p>
+    </section>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
