--- a/index.html
+++ b/index.html
@@ -26,24 +26,26 @@
       to help us improve our offering!</p>
       <form action="app.js">
         <div class="checkbox-container">
-          <input class="checkbox" type="checkbox">
-          <label for="checkbox">1</label>
-        </div>
-        <div class="checkbox-container">
-          <input class="checkbox" type="checkbox">
-          <label for="checkbox">2</label>
-        </div>
-        <div class="checkbox-container">
-          <input class="checkbox" type="checkbox">
-          <label for="checkbox">3</label>
-        </div>
-        <div class="checkbox-container">
-          <input class="checkbox" type="checkbox">
-          <label for="checkbox">4</label>
-        </div>
-        <div class="checkbox-container">
-          <input class="checkbox" type="checkbox">
-          <label for="checkbox">5</label>
+          <div class="checkbox-wrapper">
+            <input class="checkbox" type="checkbox">
+            <label for="checkbox">1</label>
+          </div>
+          <div class="checkbox-wrapper">
+            <input class="checkbox" type="checkbox">
+            <label for="checkbox">2</label>
+          </div>
+          <div class="checkbox-wrapper">
+            <input class="checkbox" type="checkbox">
+            <label for="checkbox">3</label>
+          </div>
+          <div class="checkbox-wrapper">
+            <input class="checkbox" type="checkbox">
+            <label for="checkbox">4</label>
+          </div>
+          <div class="checkbox-wrapper">
+            <input class="checkbox" type="checkbox">
+            <label for="checkbox">5</label>
+          </div>
         </div>
         <input type="submit" value="Submit">
       </form>
