--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://www.instagram.com/whokilledaaronscott/" target="_blank">Aaron Tarkington</a>.
   </div>
   <script src="app.js"></script>
 </body>
