added title and icon styling

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   <main class="content-container">
     <section class="main-section">
       <div class="icon-container">
-        <img class="icon" src="./images/icon-star.svg" alt="">
+        <div class="icon-border">
+          <img class="icon" src="./images/icon-star.svg" alt="">
+        </div>
       </div>
       <h1 class="content-title">How did we do?</h1>
       <p class="content-para">Please let us know how we did with your support request. All feedback is appreciated 
