added button styling

--- a/index.html
+++ b/index.html
@@ -29,24 +29,24 @@
       <form action="app.js">
         <div class="checkbox-container">
           <div class="checkbox-wrapper">
-            <input class="checkbox" type="checkbox">
-            <label for="checkbox">1</label>
+            <input name="radio" class="checkbox" type="radio">
+            <label class="number" for="checkbox">1</label>
           </div>
           <div class="checkbox-wrapper">
-            <input class="checkbox" type="checkbox">
-            <label for="checkbox">2</label>
+            <input name="radio" class="checkbox" type="radio">
+            <label class="number" for="checkbox">2</label>
           </div>
           <div class="checkbox-wrapper">
-            <input class="checkbox" type="checkbox">
-            <label for="checkbox">3</label>
+            <input name="radio" class="checkbox" type="radio">
+            <label class="number" for="checkbox">3</label>
           </div>
           <div class="checkbox-wrapper">
-            <input class="checkbox" type="checkbox">
-            <label for="checkbox">4</label>
+            <input name="radio" class="checkbox" type="radio">
+            <label class="number" for="checkbox">4</label>
           </div>
           <div class="checkbox-wrapper">
-            <input class="checkbox" type="checkbox">
-            <label for="checkbox">5</label>
+            <input name="radio" class="checkbox" type="radio">
+            <label class="number" for="checkbox">5</label>
           </div>
         </div>
         <input type="submit" value="Submit">
