--- a/index.html
+++ b/index.html
@@ -26,30 +26,30 @@
       <h1 class="content-title">How did we do?</h1>
       <p class="content-para">Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
-      <form action="app.js">
+      <form action="">
         <div class="checkbox-container">
           <div class="checkbox-wrapper">
-            <input name="radio" class="checkbox" type="radio">
-            <label class="number" for="checkbox">1</label>
+            <input id="1" name="radio" class="checkbox" type="radio">
+            <label class="number" for="1">1</label>
           </div>
           <div class="checkbox-wrapper">
-            <input name="radio" class="checkbox" type="radio">
-            <label class="number" for="checkbox">2</label>
+            <input id="2" name="radio" class="checkbox" type="radio">
+            <label class="number" for="2">2</label>
           </div>
           <div class="checkbox-wrapper">
-            <input name="radio" class="checkbox" type="radio">
-            <label class="number" for="checkbox">3</label>
+            <input id="3" name="radio" class="checkbox" type="radio">
+            <label class="number" for="3">3</label>
           </div>
           <div class="checkbox-wrapper">
-            <input name="radio" class="checkbox" type="radio">
-            <label class="number" for="checkbox">4</label>
+            <input id="4" name="radio" class="checkbox" type="radio">
+            <label class="number" for="4">4</label>
           </div>
           <div class="checkbox-wrapper">
-            <input name="radio" class="checkbox" type="radio">
-            <label class="number" for="checkbox">5</label>
+            <input id="5" name="radio" class="checkbox" type="radio">
+            <label class="number" for="5">5</label>
           </div>
         </div>
-        <input type="submit" value="Submit">
+        <input class="submit" type="submit" value="SUBMIT">
       </form>
     </section>
     <section class="confirmation-container">
