added submission confirmation page

--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
         <input class="submit" type="submit" value="SUBMIT">
       </form>
     </section>
-    <section class="confirmation-container">
+    <section class="confirmation-section">
       <div class="image-container">
         <img class="img" src="./images/illustration-thank-you.svg" alt="">
       </div>
-      <p class="selection-display"></p>
-      <h2 class="submission-title">Thank You!</h2>
+      <div class="display-container">
+        <p class="selection-display"></p>
+      </div>
+      <h2 class="submission-title">Thank you!</h2>
       <p class="submission-para"> We appreciate you taking the time to give a rating. If you ever need more support, 
       don’t hesitate to get in touch!</p>
     </section>
