added media queries

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
   <title>Frontend Mentor | Interactive rating component</title>
   <style>
-    .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -49,7 +48,7 @@
             <label class="number" for="5">5</label>
           </div>
         </div>
-        <input class="submit" type="submit" value="SUBMIT">
+        <button class="submit">SUBMIT</button>
       </form>
     </section>
     <section class="confirmation-section">
@@ -57,7 +56,7 @@
         <img class="img" src="./images/illustration-thank-you.svg" alt="">
       </div>
       <div class="display-container">
-        <p class="selection-display"></p>
+        <p class="selection-display">You selected 4 out of 5</p>
       </div>
       <h2 class="submission-title">Thank you!</h2>
       <p class="submission-para"> We appreciate you taking the time to give a rating. If you ever need more support, 
