--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1 class="content-title">How did we do?</h1>
       <p class="content-para">Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
-      <form action="">
+      <div>
         <div class="checkbox-container">
           <div class="checkbox-wrapper">
             <input id="1" name="radio" class="checkbox" type="radio">
@@ -49,14 +49,14 @@
           </div>
         </div>
         <button class="submit">SUBMIT</button>
-      </form>
+      </div>
     </section>
     <section class="confirmation-section">
       <div class="image-container">
         <img class="img" src="./images/illustration-thank-you.svg" alt="">
       </div>
       <div class="display-container">
-        <p class="selection-display">You selected 4 out of 5</p>
+        <p class="selection-display"></p>
       </div>
       <h2 class="submission-title">Thank you!</h2>
       <p class="submission-para"> We appreciate you taking the time to give a rating. If you ever need more support, 
