--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1 class="content-title">How did we do?</h1>
       <p class="content-para">Please let us know how we did with your support request. All feedback is appreciated 
       to help us improve our offering!</p>
-      <div>
+      <form class="page-form" onsubmit="return false" action="">
         <div class="checkbox-container">
           <div class="checkbox-wrapper">
             <input id="1" name="radio" class="checkbox" type="radio">
@@ -49,7 +49,7 @@
           </div>
         </div>
         <button class="submit">SUBMIT</button>
-      </div>
+      </form>
     </section>
     <section class="confirmation-section">
       <div class="image-container">
